# coverdrop

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .tool-versions  CONTRIBUTING.md  Cargo.toml  README.md
admin/: Cargo.toml  README.md
admin/src/: backups.rs  cli.rs  delete_journalist_form.rs  generate_constants_files.rs  generate_covernode_database.rs  generate_journalists.rs  generate_keys.rs  generate_reseed_journalist_id_key_pair_form.rs  generate_test_vectors.rs  lib.rs  main.rs  post_keys.rs  post_log_config_form.rs  reseed_journalist_vault_id_key_pair.rs  update_journalist.rs  update_system_status.rs
api/: Cargo.toml  README.md
api/.sqlx/: query-069881ab224597afc0ebce627924dc6c91108f38edb01fbf1888d5c48e42db8b.json  query-092f80d07c9719d2d830f785e9adf7f10c9c6139c2133529c9df3c40177fb5d9.json  query-11e9f602a5d12c0fd7fa24f8677806d18d8d5c4abdf1bf6050085d2c22a67962.json  query-127b328629a23eddab78d97c248b4139910c2bff56c9fe9b7f3dd24aca8dd2da.json  query-256f72a7da5dc671cfe4e27674dd19b342d1f72a6e965a4089509b473e708a68.json  query-2fe370d9db908ab8d5e33e5e889dd585a0d992bf2e824ba5850ae9d3cadbc40f.json  query-3597e2c4daad66413e5ea69b6f73610f36eacb40532a9e3aa1db04734f22eb91.json  query-36ec720c6efe1fb310edb29575a2b952f7bc9b1529ee40ed7bdefc70f6800598.json  query-37ba5ae51beb9cf78c23230027edbeb5dc23c864c1011fdc358f5c44f572f3bd.json  query-39ec7ce69cbaca0aa1ea4e2e888a13d3f177fb3232931f41ad95cb644b8e502c.json  query-3b8154b2ef24fe64cf6c7e3edc6e904e6e85c9f0b3ee0ef96d7b1b4bfca97054.json  query-3bf6286c305a4cfe212743d9a1b1a8247b686c5cb15d61adf14c8cc4b0318726.json  query-408c52d563f6d06a0ffbc934c0af0f159bf40ab78b121560d0684b6d647f4f73.json  query-417904d9d3932121276451d849f20698be87930187f152b5030461fd4f3d6d0c.json  query-4951c6cc40254610b6af6afb8a168e7414a9aba0a618f97b18d6682bca77a85a.json  query-4bf1bb9d24824687b492f4a2f9735f9bf9d1da87336b62a54d061ea92f2200f8.json  query-4fa28216873f23c41e3833cc36f8a0c2362eb5d47a8acaddcc67abd0bc1b081a.json  query-519b8e43f165ba8916b0363544f3c6de1e3c400089a594718881127b0edeca53.json  query-525c4df0a4d9abdfc3c4c75251d66113a5771176804d65ca10374a0ad9277074.json  query-5702e6625946512e45ab0a33ed018ee2abd1ee2bea5cbc5124d6158402f475a5.json  query-5843d63fe9ac12aa0f88278aaf14e6aeee09177d983ab8778b1ba8674f8d78fa.json  query-5b696846753edb28265d420a3ac97d39022e53ea3c74f183a1c203b028d364a7.json  query-604a48c9151d40cc5529cad5f99b9acc6dc77df31926e4bbd29dfc6968f5ed5a.json  query-65369df5d44d852dd62cb120978d7f81a3f69fe28a1bf13738519d00d1b18cdb.json  query-6731a1a20c3220f9f32266ae4a907cc68e4b905dfc2888e8b004edcd59894fe1.json  query-6935d93da228acffcabb25885b4b01145877f0460e3bef86b0a6e846960973b3.json  query-6fc1b5078dac03bad72650adf9ac725782651ebec3adbf16652d01839290728d.json  query-729b8d1f34b5740aaafcffabe681eacb221cc4e2f884c6f59b2e97f5ecb3cad8.json  query-79c5018f70bc33fede3541bf95fe57df874beeeafe5279997fca10bbef1d54b7.json  query-8050e15ef7eeb77e4bb172851f2d899fc82364b4be8b254ad6ae657260b2e7ff.json  query-813e52656cd9258a184e3dcfcf0a2859b06597f755cabb86774297c83c4a4921.json  query-82f960f9d48c9eb9c7ac62e3aad89b66e582e988634b0d89fb0ba415606ac0ba.json  query-84d86b75521c256d92022b1283ee309c62c99d6f2b1cd7fe8c3acf259b5b6cb4.json  query-854ee1511fdad051781dd81e1e50586472cea9455056d487b10f87f3f22d922a.json  query-861d5f0c82c8cabc3b819179f01778037b34a958f9dc2e9c3c7460e2bf0ee733.json  query-8bb9bb38b89f815bbcabd6bea6f2d4dad2bd8759f549859a2e3637f22c45dab9.json  query-8d03acdbe73915ab5cbf15c5c56cb64be2420800c292a165ff59b649c9c391e8.json  query-94c59925115331127fe2b754fb0e8215a6766819bfdc1913a9d3ae5416d70c99.json  query-9d8c43e96529318409ecd136d69047ce7c55d3b54e1e5252da493a46f714c8fe.json  query-a76b161a9f8ae5d92f81a0109fa71364ccc25bd64cc54a008f9a1f5bed25f603.json  (+19 more)
api/migrations/: 20220826101439_initial.sql  20230126122031_keys.sql  20230807135242_status.sql  20230904144910_system-keys.sql  20240627090815_add_epoch_columns.sql  20240802125058_add_epoch_to_journalist_dead_drops.sql  20240904171404_dead_drop_idempotency.sql  20240905141709_rename_system_status_pk_to_admin_pk.sql  20240916114939_dead_drop_data_hash_triggers.sql  20241023133228_add_journalist_status_column.sql  20250210112237_journalist_rotation_queue.sql  20250410133051_sign_dead_drop_created_at.sql  20250826173601_remove_deprecated_dead_drop_cert_column.sql  20250902141442_add_backups.sql  20251128164758_drop_backups_table.sql
api/scripts/: get_db_url.sh  update_sqlx_json.sh
api/src/: anchor_org_pk_cache.rs  api_state.rs  cache_control.rs  cli.rs  constants.rs  dead_drop_limits.rs  error.rs  lib.rs  main.rs
api/systemd/: api.service  bootstrap.sh
client/: Cargo.toml
client/src/: error.rs  lib.rs  main.rs
common/: Cargo.toml
common/src/: argon2_sqlcipher.rs  clap.rs  clients.rs  cover_serializable.rs  epoch.rs  error.rs  fixed_buffer.rs  form.rs  healthcheck.rs  lib.rs  metrics.rs  monitoring.rs  padded_byte_vector.rs  padded_compressed_string.rs  read_ext.rs  service.rs  throttle.rs  time.rs  tracing.rs
common/tests/: verify_crypto_test_vectors.rs
covernode/: Cargo.toml
covernode/covernode-database/: Cargo.toml
covernode/src/: checkpoint.rs  cli.rs  key_helpers.rs  lib.rs  main.rs  recipient_tag_lookup_table.rs
group-messaging/delivery-service/: Cargo.toml  README.md
group-messaging/delivery-service-lib/: Cargo.toml  README.md
identity-api/: Cargo.toml  README.md
identity-api/identity-api-database/: Cargo.toml
identity-api/src/: cli.rs  error.rs  identity_api_state.rs  lib.rs  main.rs
integration-tests/: Cargo.toml  README.md
integration-tests/images/: README.md  api.Dockerfile  covernode.Dockerfile  delivery-service.Dockerfile  fastly-edge.Dockerfile  identity-api.Dockerfile  kinesis.Dockerfile  u2j-appender.Dockerfile
integration-tests/integration-test-queries/: Cargo.toml
integration-tests/keys/: .gitignore  README.md  admin-4e3f35b7.keypair.json  admin-9f6d7764.keypair.json  backup_id-88739c0f.keypair.json  backup_id-b2957752.keypair.json  backup_msg-183cdb09.keypair.json  keys_generated_at.txt  (+17 more)
journalist-vault/: Cargo.toml
u2j-appender/: Cargo.toml
(+1369 files in other folders)
