[workspace]
members = [
    "admin",
    "api",
    "client",
    "common",
    "covernode",
    "covernode/covernode-database",
    "integration-tests",
    "integration-tests/integration-test-queries",
    "journalist-vault",
    "journalist-client/src-tauri",
    "identity-api",
    "identity-api/identity-api-database",
    "tasks/key-expiry",
    "tools/cover-traffic",
    "tools/message-canary",
    "tools/coverup",
    "u2j-appender",
    "trust-anchors",
]

resolver = "2"


[profile.release]
# We need panics in tokio tasks to correctly shut down the programme
# rather than just terminate the task
panic = "abort"


#
# Dependency security notices:
#
# - tracing-subscriber relies on the ansi-term crate, which is unmaintained.
#   For more details, see https://rustsec.org/advisories/RUSTSEC-2021-0139

[workspace.dependencies]
anyhow = "1.0.72"
argon2 = "0.5.3"
async-tar = "0.5.0"
async-trait = "0.1.68"
aws-config = { version = "1.5.5", features = ["behavior-version-latest"] }
aws-sdk-autoscaling = "1.53.0"
aws-sdk-cloudwatch = "1.48.0"
aws-sdk-kinesis = "1.41.0"
aws-sdk-ses = "1.41.0"
aws-sdk-ssm = "1.41.0"
aws-sdk-ec2 = "1.86.0"
aws-sdk-rds = "1.65.0"
aws-sdk-s3 = "1.63.0"
aws-sdk-secretsmanager = "1.53.0"
axum = { version = "0.8.3", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
base64 = "0.21.0"
bytes = "1.7.2"
chacha20poly1305 = { version = "0.10.1", features = ["std", "rand_core"] }
chrono = { version = "0.4.33", default-features = false, features = [
    "clock",
    "serde",
] }
clap = { version = "4.4.10", features = ["cargo", "derive", "env"] }
convert_case = "0.6.0"
crc32fast = "1.3.2"
crossterm = { version = "0.28.1", features = ["event-stream"] }
ctrlc = "3.4.5"
directories = "5.0.1"
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
flate2 = "1.0.24"
futures = "0.3.31"
futures-core = "0.3.30"
futures-util = "0.3.30"
hex = { version = "0.4.3", features = ["serde"] }
hex-buffer-serde = "0.3.0"
http = "1.1.0"
http-body-util = "0.1.2"
hyper = "1.5.0"
hyper-util = "0.1.9"
identicon-rs = "3.1.4"
itertools = "0.10.5"
jsonrpsee = { version = "0.19.0", features = ["macros", "async-client"] }
k8s-openapi = { version = "0.23.0", features = ["latest"] }
kube = { version = "0.96.0", features = ["client", "runtime", "ws"] }
lazy_static = "1.4.0"
libc = "0.2.150"
libsqlite3-sys = { version = "0.30", optional = false, default-features = false, features = [
    "bundled-sqlcipher-vendored-openssl",
] }
log = "0.4.17"
notify = "6.1.1"
metrics = "0.24.1"
axum-metrics = "0.2.0"
metrics_cloudwatch = "4.0.0"

num-bigint = "0.4.4"
openssl = { version = "0.10.72", features = ["vendored"] }
paste = "1.0.15"
pretty_env_logger = "0.5.0"
rand = { version = "0.8.5", features = ["small_rng"] }
ratatui = "0.28.1"
rayon = "1.10.0"
regex = "1.6.0"
reqwest = { version = "0.12.12", features = ["json"] }
rpassword = "7.0"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = { version = "1", features = ["raw_value"] }
serde_with = { version = "3.1.0", features = ["base64"] }
serial_test = "3.1.1"
sha2 = "0.10"
sodiumoxide = "0.2.7"
sqlx = "0.8.6"
snafu = "0.8.5"
strum = { version = "0.25.0", features = ["derive"] }
tempfile = "3.3.0"
testcontainers = "0.17.0"
thiserror = "1.0.40"
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7.12", features = ["compat"] }
tower = "0.4.13"
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.20", features = ["json", "env-filter"] }
ts-rs = { version = "10.1.0", features = ["chrono-impl"] }
uuid = { version = "1.2.1", features = ["serde", "v4"] }
walkdir = "2.5.0"
x25519-dalek = { version = "2", features = ["serde", "static_secrets"] }
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }
