[package]
name = "admin"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
convert_case.workspace = true
itertools.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

common = { path = "../common", features = ["test-utils"] }
covernode-database.path = "../covernode/covernode-database"
journalist-vault.path = "../journalist-vault"
log = "0.4.25"
trust-anchors = { path = "../trust-anchors" }

[features]
integration-tests = []

[dev-dependencies]
tempfile = "3.3.0"
