[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
hex.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

common.path = "../common"
journalist-vault.path = "../journalist-vault"
trust-anchors = { path = "../trust-anchors" }
