[package]
name = "covernode"
version = "0.1.0"
edition = "2021"
authors = ["The Guardian"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
metrics.workspace = true
paste.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
# tracing-subscriber relies on the ansi-term crate, which is unmaintained.
# Fore more details, see https://rustsec.org/advisories/RUSTSEC-2021-0139
tracing-subscriber.workspace = true

common.path = "../common"
covernode-database.path = "./covernode-database"
trust-anchors.path = "../trust-anchors"
