[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
futures-core.workspace = true
futures-util.workspace = true
hex.workspace = true
itertools.workspace = true
lazy_static.workspace = true
log.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = [
    "runtime-tokio-rustls",
    "postgres",
    "json",
    "chrono",
] }
tempfile.workspace = true
testcontainers.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

admin.path = "../admin"
api.path = "../api"
client.path = "../client"
common = { path = "../common", features = ["test-utils"] }
covernode-database = { path = "../covernode/covernode-database", features = [
    "test-utils",
] }
covernode.path = "../covernode"
identity-api.path = "../identity-api"
integration-test-queries.path = "integration-test-queries"
journalist-vault.path = "../journalist-vault"
u2j-appender.path = "../u2j-appender"

[dev-dependencies]
pretty_env_logger.workspace = true
