[package]
name = "u2j-appender"
version = "0.1.0"
edition = "2021"
authors = ["The Guardian"]

[dependencies]
anyhow.workspace = true
aws-config.workspace = true
aws-sdk-kinesis.workspace = true
axum.workspace = true
axum-extra.workspace = true
axum-metrics.workspace = true
base64.workspace = true
clap.workspace = true
itertools.workspace = true
metrics.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
common = { version = "0.1.0", path = "../common" }

[package.metadata.deb]
maintainer = "CoverDrop Team <coverdrop@guardian.co.uk>"
copyright = "2025, The Guardian"
extended-description = "CoverDrop U2J Appender Service"
revision = ""
depends = "$auto"
priority = "optional"
assets = [
    # binary
    ["target/release/u2j-appender", "/usr/bin/", "755"],
    # assets
    ["systemd/bootstrap.sh", "/var/u2j-appender/", "755"],
]
maintainer-scripts = "systemd/"
systemd-units = { enable = true }
