[package]
name = "covernode-database"
version = "0.1.0"
edition = "2021"

[features]
test-utils = []

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
common = { path = "../../common" }
sqlx = { workspace = true, features = [
  "runtime-tokio-rustls",
  "chrono",
  "sqlite",
] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
