[package]
name = "identity-api-database"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-tokio-rustls",
    "chrono",
    "sqlite",
] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

common = { path = "../../common" }
