[package]
name = "journalist-client"
version = "0.1.0"
description = "A desktop and mobile client for journalist users of the CoverDrop service"
authors = ["The Guardian"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "journalist_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
directories.workspace = true
hex.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
ts-rs.workspace = true


common = { path = "../../common" }
journalist-vault = { path = "../../journalist-vault" }
tauri-plugin-notification = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
