[package]
name = "key-expiry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
reqwest.workspace = true
chrono.workspace = true
hex.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
thiserror.workspace = true

common = { path = "../../common" }
