[package]
name = "coverup"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-tar.workspace = true
aws-config.workspace = true
aws-sdk-autoscaling.workspace = true
aws-sdk-ec2.workspace = true
aws-sdk-rds.workspace = true
aws-sdk-s3.workspace = true
aws-sdk-secretsmanager.workspace = true
aws-sdk-ssm.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
ctrlc.workspace = true
directories.workspace = true
futures.workspace = true
http-body-util.workspace = true
http.workspace = true
hyper-util.workspace = true
hyper.workspace = true
itertools.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
notify.workspace = true
rand.workspace = true
ratatui.workspace = true
rayon.workspace = true
reqwest.workspace = true
rpassword.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = [
    "runtime-tokio-rustls",
    "postgres",
    "json",
    "chrono",
] }
tokio-util.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
walkdir.workspace = true

api.path = "../../api"
common.path = "../../common"
covernode.path = "../../covernode"
identity-api.path = "../../identity-api"
identity-api-database.path = "../../identity-api/identity-api-database"
journalist-vault.path = "../../journalist-vault"
open = "5.3.1"

[dev-dependencies]
tempfile.workspace = true
